<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/departurelabel"
        android:textSize="30sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/departGroup">

        <RadioButton
            android:id="@+id/departMonterey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montereylabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/departLosAngeles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/losangeleslabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/departSeattle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seattlelabel"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrivallabel"
        android:textSize="30sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrivalGroup">

        <RadioButton
            android:id="@+id/arriveMonterey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montereylabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/arriveLosAngeles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/losangeleslabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/arriveSeattle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seattlelabel"
            android:textSize="18sp" />

    </RadioGroup>



    <EditText
        android:id="@+id/numOFTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/numberoftickets"
        android:inputType="number" />

    <Button
        android:id="@+id/submit"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:text="@string/submitbuttonlabel"
        android:textSize="20sp"/>
</LinearLayout>