<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.csumb.jofausto.otterairways.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="270dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="88dp"
        android:text="@string/otter_airways"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.333">

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button_label" />

        <Button
            android:id="@+id/reserveSeatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve_seat_button_label" />

        <Button
            android:id="@+id/cancelReservationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_reservation_button_label" />

        <Button
            android:id="@+id/manageSystemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_system_button_label" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
