<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmDeletionText"
            android:text="@string/confirmDeletionMessage"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmDeletionText">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/confirmDeletionButton"
                android:text="@string/confirmDeletionLabel"/>


            <Button
                android:id="@+id/cancelCancellationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/cancelDeletionButton"
                android:layout_centerHorizontal="true"
                android:text="@string/cancelButtonLabel"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="37dp" />
        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>